Setting up base database structure. Defined user and extended identity. Created data classes.

--- a/LearnManagement.Web/appsettings.json
+++ b/LearnManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LearnManagement.Web-52ebbf05-ba9b-493d-aa20-7678fe340363;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LearnManagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
